We're on the wave
Basic infra is up.
Call me for explanation

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,2 +1,5 @@
-<p>This is the about view.</p>
-<p><about-dir></about-dir></p>
+<div class="jumbotron">
+<p class="lead">
+    {{ dish + " " + nation + " " + adj }}
+</p>
+</div>
