--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <!--<h1>'Allo, 'Allo!</h1>-->
   <p class="lead">
     <img src="images/shaiba.png" alt="I'm Shaiba"><br>
-    Generated sentence here
+      {{ dish + " " + nation + " " + adj }}
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
