TODO: Settings page

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,5 +1,8 @@
 <div class="jumbotron">
+   <p><input placeholder="מנה" type="text"/></p>
+   <p><input placeholder="לאום" type="text"></p>
+   <p><input placeholder="תוספת" type="text"></p>
 <p class="lead">
-    {{ dish + " " + nation + " " + adj }}
+
 </p>
 </div>
