fixes to parsejs + mainjs
asd

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
   <p class="lead">
     <img src="images/shaiba.png" alt="I'm Shaiba"><br>
       <a href ng-click="getData()">Update Data</a>
-    <p><strong>Dish:</strong> {{dishes}}</p>
+    <p><strong>Dish:</strong> {{sentence}}</p>
   </p>
     <button ng-controller="MainCtrl" ng-click="generateSentence()"></button>
 
