--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <!--<h1>'Allo, 'Allo!</h1>-->
   <p class="lead">
     <img src="images/shaiba.png" alt="I'm Shaiba"><br>
-      <a href ng-click="getData()">Update Data</a>
+      <a href ng-click="getTables()">Update Data</a>
     <p><strong>Dish:</strong> {{sentence}}</p>
   </p>
     <button ng-controller="MainCtrl" ng-click="generateSentence()"></button>
