--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,9 +1,9 @@
 <div class="jumbotron">
     <strong>{{title}}</strong>
     <div class="focusguard" id="focusguard-1" tabindex="0"><br></div>
-    <p><input id="firstInput" placeholder="מנה" type="text" tabindex="1" on-keyup-fn="" parameters="[postData, [13], dishes]"/></p>
-    <p><input placeholder="לאום" type="text" tabindex="2" on-keyup-fn="" parameters="[postData, [13], nations]"></p>
-    <p><input id="lastInput" placeholder="תוספת" type="text" tabindex="3" on-keyup-fn="" parameters="[postData, [13], adj]"></p>
+    <p><input id="firstInput" placeholder="מנה" type="text" tabindex="1" on-keyup-fn="" keyup-parameters="[postData, [13], dishes]"/></p>
+    <p><input placeholder="לאום" type="text" tabindex="2" on-keyup-fn="" keyup-parameters="[postData, [13], nations]"></p>
+    <p><input id="lastInput" placeholder="תוספת" type="text" tabindex="3" on-keyup-fn="" keyup-parameters="[postData, [13], adj]"></p>
     <div class="focusguard" id="focusguard-2" tabindex="4"></div>
     <div id="alert_placeholder"></div>
 <p class="lead">
