--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -1,3 +1,20 @@
-<div class="jumbotron">
+<div class="well">
+    <table class="table" dir="RTL" cellpadding="6" cellspacing="0" style="margin:1em auto;">
+        <thead>
+            <tr>
+                <td>#</td>
+                <td>משפט</td>
+                <td>ציון</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="sentence in bestSentences">
+                <td>{{$index+1}}</td>
+                <td>{{sentence.name}}</td>
+                <td><rating ng-model="sentence.grade" max="max" readonly="isReadonly" ng-click="changeRating($index)"></rating></td>
+            </tr>
+        </tbody>
+    </table>
 
+    <button ng-click="showGrades()">תראה מה יש פה יא פלופ</button>
 </div>
