--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -1,4 +1,4 @@
-<div>{{ fbUser }}</div>
+<div>{{ fbUser }}, {{ fbEmail}}</div>
 <div class="well">
     <table class="table" dir="RTL" cellpadding="6" cellspacing="0" style="margin:1em auto;">
         <thead>
