--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -12,10 +12,10 @@
             <tr ng-repeat="sentence in bestSentences">
                 <td>{{$index+1}}</td>
                 <td>{{sentence.name}}</td>
-                <td><rating ng-model="sentence.grade" max="max" readonly="isReadonly" ng-click="changeRating($index)"></rating></td>
+                <td><rating ng-model="sentence.grade" max="max" readonly="sentence.alreadyChanged" ng-click="changeRating($index)"></rating></td>
             </tr>
         </tbody>
     </table>
 
-    <button ng-click="showGrades()">תראה מה יש פה יא פלופ</button>
+    <p style="text-align:center"><button ng-click="showGrades()">תראה מה יש פה יא פלופ</button></p>
 </div>
