--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles/animation.css"/>
 <div>{{ fbUserName }}, {{ fbEmail}}</div>
 <div class="well">
     <table class="table" dir="RTL" cellpadding="6" cellspacing="0" style="margin:1em auto;">
