--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="styles/animation.css"/>
-<div>{{ fbUserName }}, {{ fbEmail}}</div>
+<div class="jumbotron">
 <div class="well">
     <table class="table" dir="RTL" cellpadding="6" cellspacing="0" style="margin:1em auto;">
         <thead>
@@ -19,4 +18,5 @@
     </table>
 
     <p style="text-align:center"><button ng-click="showGrades()">תראה מה יש פה יא פלופ</button></p>
+</div>
 </div>
