mainly few changes to parse.js and changed the jumbotron color to white

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -122,3 +122,7 @@ input:focus {
 [ng\:cloak], [ng-cloak], .ng-cloak {
     display: none !important;
 }
+
+.white-color{
+    background-color: white;
+}
