--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron white-color">
     <h3>!עיזרו לשייבה להיזכר</h3>
     <div class="focusguard" id="focusguard-1" tabindex="0"><br></div>
     <p><input id="firstInput" placeholder="מנה" type="text" tabindex="1" on-keyup-fn="" keyup-parameters="[postData, [13], dishes]" ng-disabled="!isLoggedIn"/></p>
