--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron white-color">
   <!--<h1>'Allo, 'Allo!</h1>-->
   <p class="lead">
     <img src="images/shaiba.png" id="shaibapic" alt="I'm Shaiba"
