--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,12 @@
 <div class="jumbotron white-color">
   <!--<h1>'Allo, 'Allo!</h1>-->
   <p class="lead">
+    <span ng-clic="addToHall" class="glyphicon glyphicon-star favstar pull-left"/>
     <img src="images/shaiba.png" id="shaibapic" alt="I'm Shaiba"
          ng-click="getSentence()" style="cursor: pointer;">
-    <p><strong>{{dish + " " + nation + " " + adj }}</strong></p>
+    <p style="direction: RTL;">
+    <strong>{{dish + " " + nation + " " + adj }}</strong>
+    </p>
   </p>
 </div>
 
