All is good man

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="jumbotron white-color">
   <!--<h1>'Allo, 'Allo!</h1>-->
   <p class="lead">
-    <span ng-clic="addToHall" class="glyphicon glyphicon-star favstar pull-left"/>
+    <fav-star></fav-star>
     <img src="images/shaiba.png" id="shaibapic" alt="I'm Shaiba"
          ng-click="getSentence()" style="cursor: pointer;">
     <p style="direction: RTL;">
