All is good man

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,7 +1,7 @@
 <div class="jumbotron white-color">
     <h3>!עיזרו לשייבה להיזכר</h3>
     <div class="focusguard" id="focusguard-1" tabindex="0"><br></div>
-    <p><input id="firstInput" placeholder="מנה" type="text" tabindex="1" on-keyup-fn="" keyup-parameters="[postData, [13], dishes]" ng-disabled="!isLoggedIn" autocomplete ui-items="dishes"/></p>
+    <p><input id="firstInput" placeholder="מנה" type="text" tabindex="1" on-keyup-fn="" keyup-parameters="[postData, [13], dishes]" ng-disabled="!isLoggedIn" ui-items="dishes"/></p>
     <p><input placeholder="לאום" type="text" tabindex="2" on-keyup-fn="" keyup-parameters="[postData, [13], nations]" ng-disabled="!isLoggedIn"></p>
     <p><input id="lastInput" placeholder="תוספת" type="text" tabindex="3" on-keyup-fn="" keyup-parameters="[postData, [13], adj]" ng-disabled="!isLoggedIn"></p>
     <div class="focusguard" id="focusguard-2" tabindex="4"></div>
