--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
     <img src="images/shaiba.png" id="shaibapic" alt="I'm Shaiba"
          ng-click="getSentence()" style="cursor: pointer;">
     <p style="direction: RTL;">
-    <strong>{{dish + " " + nation + " " + adj }}</strong>
+    <strong>{{ dish + ' ' + nation + ' ' + adj }}</strong>
     </p>
   </p>
 </div>
