--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -1,5 +1,5 @@
 <div class="jumbotron white-color">
-    <div class="well">
+    <div class="">
         <table class="table" dir="RTL" cellpadding="6" cellspacing="0" style="margin:1em auto;">
             <thead>
                 <tr>
@@ -12,7 +12,7 @@
                 <tr ng-repeat="sentence in bestSentences">
                     <td>{{$index+1}}</td>
                     <td>{{sentence.name}}</td>
-                    <td><rating ng-model="sentence.grade" max="max" readonly="!isLoggedIn" ng-click="changeRating($index)"></rating></td>
+                    <td><rating ng-model="sentence.grade" max="max" readonly="!isLoggedIn" ng-click="changeRating($index)" class="rating"></rating></td>
                 </tr>
             </tbody>
         </table>
