--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,9 +2,9 @@
   <!--<h1>'Allo, 'Allo!</h1>-->
   <p class="lead">
     <fav-star></fav-star>
-    <img src="images/shaiba.png" id="shaibapic" alt="I'm Shaiba"
+    <img src="images/shaiba.png" class="shake" id="shaibapic" alt="I'm Shaiba"
          ng-click="getSentence()" style="cursor: pointer;">
-    <p style="direction: RTL;">
+    <p style="direction: RTL; height: 20px;">
     <strong>{{ dish + ' ' + nation + ' ' + adj }}</strong>
     </p>
   </p>
