some changes to hall.js changeRating. now it returns if the sentence is read only and it colors the sentence accordingly...
main.js works with SharedData

main.css now has some colors for the sentences in halloffame.html

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -150,6 +150,18 @@ input:focus {
 }
 
 .rating {
-    color: #FFEA00;
+    color: #FFBA42;
     font-size: 20px;
+}
+
+.rated-success {
+    background-color: #EDFFD6;
+}
+
+.rated-pending {
+    background-color: #FFF5BF;
+}
+
+.rated-failed {
+    background-color: #FFEBEB;
 }
