--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -9,7 +9,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="sentence in bestSentences">
+                <tr ng-repeat="sentence in bestSentences" class={{sentence.color}}>
                     <td>{{$index+1}}</td>
                     <td>{{sentence.name}}</td>
                     <td><rating ng-model="sentence.grade" max="max" readonly="sentence.isReadOnly" ng-click="changeRating($index)" class="rating"></rating></td>
