--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,6 +41,20 @@ body {
   margin: 30px 0;
 }
 
+.nav-admin {
+    color: #5765FF;
+    font-size: 20px;
+}
+
+.fbwelcome {
+    margin-top: 14px;
+    padding-right: 3px;
+    text-size: 13px;
+    color: #DEA704;
+    font: Arial;
+   /* margin-left: 300px;*/
+}
+
 /* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
@@ -94,6 +108,66 @@ body {
     pointer-events: none;
     color: #FFEEBD;
     font-size: 80px;
+}
+
+.dbwrapper
+{
+    min-height:100%;
+    height: 60%;
+    width:100%;
+    position:relative;
+    display:inline-block;
+}
+
+.dbitem {
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 15px;
+    width: 90%;
+    padding: 2px;
+    /*background-color: #DEE2FF;*/
+    /*border-radius: 3px;*/
+    border-bottom: 1px solid;
+    /*border-top: 1px solid;*/
+    border-color: #B5BFFF;
+}
+
+.dbitem-content {
+    padding-right: 3px;
+    color: #788AFF;
+}
+
+.dbitem:hover {
+    background-color: #EDF0FF;
+}
+
+.dbitem-remove {
+    margin-top: 3px;
+    color: #EB6A59;
+    cursor: pointer;
+}
+
+.dbitem-remove:hover {
+    color: #E8321A;
+}
+
+.dbsidebar
+{
+    width:20%;
+    top:0px;
+    left:0px;
+    bottom:0px;
+    position:absolute;
+}
+.dbcontent
+{
+    min-height:300px;
+    width:80%;
+    position:relative;
+    float:right;
+    text-align: right;
+    direction: RTL;
+    /*margin: 0 0 0 130px;*/
 }
 
 .favstar:hover {
