- Tooltips for input boxes - Admin panel

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -2,8 +2,8 @@
 
     <div class="dbwrapper">
         <div class="dbcontent">
-            <input ng-model="searchText" tooltip="Type anything to filter the results" tooltip-trigger="focus" tooltip-placement="top"/>
-            <ul class="dbitem {{item.color}}" ng-repeat="item in tableContent | filter:searchText">
+            <input ng-model="tezt"/>
+            <ul class="dbitem {{item.color}}" ng-repeat="item in tableContent | filter:tezt">
                 <span class="dbitem-content">
                     {{item.name}}
                     <span class="pull-left glyphicon glyphicon-remove dbitem-remove" ng-click="removeDbItem(item.objectId, $index)"/>
