in general, now the main page would generate sentences that are more accurate in hebrew (male/female and single/plural), in regard to the dish and the nation. plus, when adding a new dish, the user will be asked now what kind of dish is it in regards to those characters, in a new modal that opened. fixed the color bug in hall.js. fixed the way the add to hall star is being disabled or enabled. the senetnece is being generated now only after all the required data is coming back, thaks to $q.all(). correct alert when user try to vote but is not logged in. now the method called postToParse and not postToparse the parse.getRandom() method returns now an object, so you can do more things with it, instead of just getting the name few more stuff in SharedData two little shitty fixes in index.html

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,3 +1,25 @@
+<script type="text/ng-template" id="addDishModal.html">
+    <div dir="rtl">
+        <div class="modal-header">
+            <h3 class="modal-title">עברית שפה קשה</h3>
+            <h5>עזור לשייבה בבעיות השפה שלו</h5>
+        </div>
+        <div class="modal-body">
+            <h5>איזה מהמשפטים הבאים הכי נכון?</h5>
+            <div ng-repeat="word in suffixOptions">
+                <label>
+                    <input type="radio" ng-model="$parent.correctSuffix" ng-value="word" name="correct">
+                    {{displayDish + ' ' + displayNation + word}} <br/>
+                </label>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">בום</button>
+            <button class="btn btn-warning" ng-click="cancel()">עזוב אחי, כבד עלי עברית</button>
+        </div>
+    </div>
+</script>
+
 <div class="jumbotron white-color">
     <h3>!עיזרו לשייבה להיזכר</h3>
     <div class="focusguard" id="focusguard-1" tabindex="0"><br></div>
