Try to reach /admin 3 times

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -93,9 +93,10 @@ body {
 }
 
 .fbbutton {
+    margin-top: 3px;
     cursor: pointer;
-    height: 19%;
-    width: 19%;
+    height: 35%;
+    width: 35%;
 }
 
 .favstar {
