--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -49,7 +49,7 @@ body {
 .fbwelcome {
     margin-top: 14px;
     padding-right: 3px;
-    text-size: 13px;
+    font-size: 15px;
     color: #DEA704;
     font: Arial;
    /* margin-left: 300px;*/
@@ -160,10 +160,10 @@ body {
 
 .dbsidebar
 {
-    width:20%;
-    top:0px;
-    left:0px;
-    bottom:0px;
+    width: 20%;
+    top: 0;
+    left: 0;
+    bottom: 0;
     position:absolute;
 }
 .dbcontent
@@ -293,4 +293,8 @@ input[type="text"]:focus {
 }
 .shake {
     display:inline-block
+}
+
+.modal-header {
+    text-align: center;
 }
