--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,36 +1,12 @@
-<script type="text/ng-template" id="addDishModal.html">
-    <div dir="rtl">
-        <div class="modal-header">
-            <h3 class="modal-title">עברית שפה קשה</h3>
-            <h5>עזור לשייבה בבעיות השפה שלו</h5>
-        </div>
-        <div class="modal-body">
-            <h5>איזה מהמשפטים הבאים הכי נכון?</h5>
-            <div ng-repeat="word in suffixOptions">
-                <label>
-                    <input type="radio" ng-model="$parent.correctSuffix" ng-value="word" name="correct">
-                    {{displayDish + ' ' + displayNation + word}} <br/>
-                </label>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" ng-click="ok()">בום</button>
-            <button class="btn btn-warning" ng-click="cancel()">עזוב אחי, כבד עלי עברית</button>
-        </div>
-    </div>
-</script>
-
 <div class="jumbotron white-color">
     <h3>!עיזרו לשייבה להיזכר</h3>
     <div class="focusguard" id="focusguard-1" tabindex="0"><br></div>
-    <p><input id="firstInput" placeholder="מנה" type="text" tabindex="1" on-keyup-fn="" keyup-parameters="[postData, [13], dishes]" ng-disabled="!isLoggedIn" ui-items="dishes" tooltip="לדוגמא: סמבוסק, לימון גמדי"  tooltip-trigger="focus" tooltip-placement="left"/></p>
-    <p><input placeholder="לאום" type="text" tabindex="2" on-keyup-fn="" keyup-parameters="[postData, [13], nations]" ng-disabled="!isLoggedIn" tooltip="לדוגמא: אוסטרי, קווקזי"  tooltip-trigger="focus" tooltip-placement="left"></p>
-    <p><input id="lastInput" placeholder="תוספת" type="text" tabindex="3" on-keyup-fn="" keyup-parameters="[postData, [13], adj]" ng-disabled="!isLoggedIn" tooltip="לדוגמא: מושחם קלות בתנור, ספוג במיץ עגבניה"  tooltip-trigger="focus" tooltip-placement="left"></p>
+    <p><input id="firstInput" placeholder="מנה" type="text" tabindex="1" on-keyup-fn="" data-keyup-parameters="[postData, [13], dishes]" ng-disabled="!isLoggedIn" data-ui-items="dishes" tooltip="לדוגמא: סמבוסק, לימון גמדי"  data-tooltip-trigger="focus" data-tooltip-placement="left"/></p>
+    <p><input placeholder="לאום" type="text" tabindex="2" on-keyup-fn="" data-keyup-parameters="[postData, [13], nations]" ng-disabled="!isLoggedIn" tooltip="לדוגמא: אוסטרי, קווקזי"  data-tooltip-trigger="focus" data-tooltip-placement="left"></p>
+    <p><input id="lastInput" placeholder="תוספת" type="text" tabindex="3" on-keyup-fn="" data-keyup-parameters="[postData, [13], adj]" ng-disabled="!isLoggedIn" tooltip="לדוגמא: מושחם קלות בתנור, ספוג במיץ עגבניה"  data-tooltip-trigger="focus" data-tooltip-placement="left"></p>
     <div class="focusguard" id="focusguard-2" tabindex="4"></div>
     <div id="alert_placeholder"></div>
-<p class="lead">
-
-</p>
+<p class="lead"></p>
 </div>
 
 <script type="text/javascript">
