A better design for the adj modal

--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -1,6 +1,6 @@
 <div class="jumbotron white-color">
     <div class="">
-        <input type="text" ng-model="$parent.filterText.$" tooltip="רשמו מנה, לאום או סתם מילה" tooltip-trigger="focus" tooltip-placement="top"/>
+        <input type="text" class="aboutinput" ng-model="$parent.filterText.$" tooltip="רשמו מנה, לאום או סתם מילה" tooltip-trigger="focus" tooltip-placement="top"/>
         <table class="table" dir="RTL" cellpadding="6" cellspacing="0" style="margin:1em auto;">
             <thead>
                 <tr>
