--- a/app/views/Partials/AddAdjectiveModal.html
+++ b/app/views/Partials/AddAdjectiveModal.html
@@ -5,7 +5,7 @@
     </div>
     <div class="modal-body">
         <h4>תתקן את המשפטים הלא נכונים, ובסוף סמן את כל המשפטים שאתה מאשר</h4>
-        <ul ng-repeat="adjective in displayAdjectives" class="aboutinput" style="height: 50px;">
+        <ul ng-repeat="adjective in displayAdjectives" class="shaiba-input" style="height: 50px;">
             <span>
                 <input type="checkbox" class="" ng-model="adjective.approved"><label style="padding-right: 4px; margin-bottom: 41px;">{{adjective.dish}}</label></input>
                 <input type="text" class="input-noborders" style="margin-right: 30px;" ng-model="adjective.name"/>
