--- a/app/views/info.html
+++ b/app/views/info.html
@@ -1,13 +1,13 @@
 <div class="jumbotron white-color">
 <p style="font-family: Lucida Grande, Lucida Sans, Arial, sans-serif; font: 'Lucida Grande'"><label>Shaiba Generator BETA</label></p>
-<div class="dance face-doron"><img src="images/doron.png" ng-href="mailDoron"/></div>
-<div class="dance face-daniel"><img src="images/daniel.png"/></div>
+<div class="dance face-doron pull-left"><img src="images/doron.png" ng-href="mailDoron"/><a href="www.facebook.com/sagesdo"><img src="images/icon_facebook_small.png"/></a></div>
+<div class="dance face-daniel pull-right"><img src="images/daniel.png"/><a href="www.facebook.com/daniel.kazak"><img src="images/icon_facebook_small.png"/></a></div>
 <div class="doron">
-    <h5>{{ doronTitle }}</h5>
-    <p>{{ doronContent }}</p>
+    <label class="text-muted">{{ doronTitle }}</label>
+    <p></p>
 </div>
 <div class="daniel">
-    <h5>{{ danielTitle}}</h5>
-    <p>{{ danielContent }}</p>
+    <label class="text-muted">{{ danielTitle}}</label>
+    <p></p>
 </div>
 </div>
