few more changes. addAdjectiveModal - new all checkbox. facebook will open in new tab in info

--- a/app/views/Partials/AddAdjectiveModal.html
+++ b/app/views/Partials/AddAdjectiveModal.html
@@ -4,11 +4,12 @@
         <h3>עזור לשייבה בבעיות השפה שלו</h3>
     </div>
     <div class="modal-body">
-        <h4>תתקן את המשפטים הלא נכונים, ובסוף סמן את כל המשפטים שאתה מאשר</h4>
+        <h4>תקן את המשפטים הלא נכונים, ובסוף סמן את כל המשפטים שאתה מאשר</h4>
+            <input type="checkbox" ng-click="allAdjClicked()" ng-checked="allAdjMet()"><label>וואלה הכל הולך נשמה</label>
         <ul ng-repeat="adjective in displayAdjectives" class="shaiba-input" style="height: 50px;">
             <span>
-                <input type="checkbox" class="" ng-model="adjective.approved"><label style="padding-right: 4px; margin-bottom: 41px;">{{adjective.dish}}</label></input>
-                <input type="text" class="input-noborders" style="margin-right: 30px;" ng-model="adjective.name"/>
+                <input type="checkbox" class="" ng-model="adjective.approved"><label style="padding-right: 4px; margin-bottom: 41px;">{{adjective.dish}}</label>
+                <input type="text" class="input-noborders" style="margin-right: 30px;" ng-model="adjective.name" ng-change="textChanged($index)"/>
             </span>
         </ul>
     </div>
