--- a/app/views/info.html
+++ b/app/views/info.html
@@ -1,11 +1,11 @@
 <div class="jumbotron white-color">
 <p style="font-family: Lucida Grande, Lucida Sans, Arial, sans-serif; font: 'Lucida Grande'"><label>Shaiba Generator BETA</label></p>
 <div class="dance face-doron pull-left"><img src="images/doron.png" ng-href="mailDoron"/>
-    <a href="http://www.facebook.com/sagesdo"><img src="images/icon_facebook_small.png"/></a>
+    <a href="http://www.facebook.com/sagesdo" target="_blank"><img src="images/icon_facebook_small.png"/></a>
     <a href="mailto:sagesdoron@gmail.com"><img src="images/Gmail-icon.png"/></a>
 </div>
 <div class="dance face-daniel pull-right"><img src="images/daniel.png"/>
-    <a href="http://www.facebook.com/daniel.kazak"><img src="images/icon_facebook_small.png"/></a>
+    <a href="http://www.facebook.com/daniel.kazak" target="_blank"><img src="images/icon_facebook_small.png"/></a>
     <a href="mailto:daniel.kazak@gmail.com"><img src="images/Gmail-icon.png"/></a>
 </div>
 <div class="doron">
