--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -355,7 +355,14 @@ body {
 
 
 
+.adjmodal-wrapper {
+    width: 70%;
+    margin: 0 auto;
+}
 
+.adjmodal-edit {
+    margin-left: 15%;
+}
 
 .modal-header {
     text-align: center;
