--- a/app/views/halloffame.html
+++ b/app/views/halloffame.html
@@ -7,6 +7,7 @@
                     <td>#</td>
                     <td>משפט</td>
                     <td>ציון</td>
+                    <td>נוסף ע"י</td>
                 </tr>
             </thead>
             <tbody>
@@ -14,6 +15,7 @@
                     <td>{{$index+1}}</td>
                     <td>{{sentence.name}}</td>
                     <td><rating ng-model="sentence.grade" max="max" readonly="sentence.isReadOnly" ng-click="changeRating($index)" class="rating"></rating></td>
+                    <td style="font-size: 10px;">{{sentence.userName}}</td>
                 </tr>
             </tbody>
         </table>
