mostly changes for better dependency injection, using the array notation.

--- a/app/views/Partials/appCodeModal.html
+++ b/app/views/Partials/appCodeModal.html
@@ -1,5 +1,8 @@
 <div class="jumbotron white-color">
-<img src="https://chart.googleapis.com/chart?chs=116x116&cht=qr&chl=http://build.phonegap.com/apps/1179396/install/pyrwoc-kVzsKfwVRXTkz&chld=L|1&choe=UTF-8"/>
-<br><span style="font-size: 20px; font-weight: bold;">סרקו את הפלופּה על מנת לקבל את שייבה לנייד</span>
-<br><a href="https://build.phonegap.com/apps/1179396/download/android/?qr_key=pyrwoc-kVzsKfwVRXTkz" style="color: lightslategray">הורדה</a></span>
+    <br /><br />
+    <img src="https://chart.googleapis.com/chart?chs=116x116&cht=qr&chl=http://build.phonegap.com/apps/1179396/install/pyrwoc-kVzsKfwVRXTkz&chld=L|1&choe=UTF-8"/>
+    <br /><br />
+    <span style="font-size: 20px; font-weight: bold;">סרקו את הפלופּה על מנת לקבל את שייבה לנייד</span>
+    <br /><br />
+    <a href="https://build.phonegap.com/apps/1179396/download/android/?qr_key=pyrwoc-kVzsKfwVRXTkz" style="color: lightslategray">הורדה</a>
 </div>
